[gd_scene load_steps=12 format=2]

[ext_resource path="res://walls-doors.res" type="TileSet" id=1]
[ext_resource path="res://rat.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/cheese.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/DancePad.tscn" type="PackedScene" id=4]
[ext_resource path="res://Door1.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/Exit.tscn" type="PackedScene" id=6]
[ext_resource path="res://level0.gd" type="Script" id=7]
[ext_resource path="res://objects/FloorButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://characters/Cat.tscn" type="PackedScene" id=9]
[ext_resource path="res://objects/Fish.tscn" type="PackedScene" id=10]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( -96.0304, 11.1146, -9.41806, 10.4839, -12.6586, 65.0924, -97.7122, 67.2444, 83.0387, 15.2067, 179.559, 16.9745, 172.488, 126.576, 22.5811, 130.819, 18.6542, 76.7532, -11.7667, 76.6872, -11.7667, 131.391, -98.0348, 129.488, -97.9224, 77.3351, 16.5703, 65.7646, 16.5707, 17.3281, 44.1479, 15.9138, 41.3194, -50.9077, 84.8065, -38.1798, 214.207, -39.9476, 208.008, -36.1093, 183.801, -55.1504, 222.692, -49.14, 8.08539, -62.575, -43.1798, -65.757, -48.8367, -95.1019, 18.692, -82.7275, 17.6313, -68.2319, 222.692, -95.4555, 186.983, -80.2527 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 7, 8 ), PoolIntArray( 9, 10, 11, 12, 3, 2 ), PoolIntArray( 9, 2, 13, 8 ), PoolIntArray( 4, 8, 13, 14, 15 ), PoolIntArray( 4, 15, 16, 17 ), PoolIntArray( 18, 19, 17, 16, 20, 21 ), PoolIntArray( 22, 23, 24, 25, 26 ), PoolIntArray( 27, 21, 20, 28 ), PoolIntArray( 24, 27, 28, 25 ) ]
outlines = [ PoolVector2Array( 16.5707, 17.3281, 44.1479, 15.9138, 41.3194, -50.9077, 183.801, -55.1504, 186.983, -80.2527, 18.692, -82.7275, 17.6313, -68.2319, 8.08539, -62.575, -43.1798, -65.757, -48.8367, -95.1019, 222.692, -95.4555, 222.692, -49.14, 214.207, -39.9476, 208.008, -36.1093, 84.8065, -38.1798, 83.0387, 15.2067, 179.559, 16.9745, 172.488, 126.576, 22.5811, 130.819, 18.6542, 76.7532, -11.7667, 76.6872, -11.7667, 131.391, -98.0348, 129.488, -97.9224, 77.3351, -97.7122, 67.2444, -96.0304, 11.1146, -9.41806, 10.4839, -12.6586, 65.0924, 16.5703, 65.7646 ) ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )
time_limit = 120

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -393220, 2, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -458738, 7, 0, -327684, 3, 0, -393202, 6, 0, -262148, 3, 0, -327678, 1, 0, -327677, 1, 0, -327676, 1, 0, -327675, 1, 0, -327674, 1, 0, -327673, 1, 0, -327672, 1, 0, -327671, 1, 0, -327670, 1, 0, -327666, 6, 0, -196612, 4, 0, -196611, 1, 0, -196610, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 5, 0, -262130, 6, 0, -196607, 6, 0, -196594, 5, 0, -131071, 6, 0, -131066, 2, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -65535, 5, 0, -65530, 4, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, 65529, 2, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 7, 0, 0, 2, 0, 1, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 7, 0, 131065, 3, 0, 131071, 6, 0, 65536, 3, 0, 65547, 6, 0, 196601, 3, 0, 196607, 6, 0, 131072, 3, 0, 131083, 6, 0, 131084, -1610612732, 0, 131085, -1610612733, 0, 131086, -1610612733, 0, 131087, -1610612733, 0, 131088, -1610612734, 0, 262137, 3, 0, 262143, 6, 0, 196608, 3, 0, 196619, 6, 0, 196620, -1610612735, 0, 196624, -1610612736, 0, 327673, 3, 0, 262160, -1610612736, 0, 393209, 3, 0, 393215, 6, 0, 327680, 3, 0, 327691, 6, 0, 327692, -1610612735, 0, 327696, -1610612736, 0, 458745, 3, 0, 458751, 6, 0, 393216, 3, 0, 393227, 6, 0, 393228, -1610612731, 0, 393229, -1610612730, 0, 393230, -1610612730, 0, 393231, -1610612730, 0, 393232, -1610612729, 0, 524281, 3, 0, 524287, 6, 0, 458752, 3, 0, 458763, 6, 0, 589817, 4, 0, 589818, 1, 0, 589819, 1, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 5, 0, 524288, 4, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 5, 0 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( -2.12131, 0 )
navpoly = SubResource( 1 )

[node name="Cat" parent="Navigation2D" instance=ExtResource( 9 )]
position = Vector2( 144, 104 )

[node name="DancePad" parent="." instance=ExtResource( 4 )]
position = Vector2( -92, 16 )
scale = Vector2( 0.5, 0.5 )
sequence_size = 4

[node name="FloorButton_0" parent="." instance=ExtResource( 8 )]
position = Vector2( 77.3333, 24 )

[node name="Cheese_0" parent="." instance=ExtResource( 3 )]
position = Vector2( 117.291, 20.3417 )
scale = Vector2( 1, 1 )

[node name="Cheese_1" parent="." instance=ExtResource( 3 )]
position = Vector2( 98.1001, 44.6086 )
scale = Vector2( 1, 1 )

[node name="Rat" parent="." instance=ExtResource( 2 )]
position = Vector2( 123.237, -50.8283 )
speed = 300

[node name="DoorExit" parent="." instance=ExtResource( 5 )]
position = Vector2( 200, 64 )
rotation = 1.5708

[node name="Door2" parent="." instance=ExtResource( 5 )]
position = Vector2( -8, 80 )
rotation = 4.71239
opened = true

[node name="Exit" parent="." instance=ExtResource( 6 )]
position = Vector2( 232, 64 )

[node name="Fish" parent="." instance=ExtResource( 10 )]
position = Vector2( -30.8342, -85.3423 )
[connection signal="exited" from="Exit" to="." method="_on_Exit_exited"]
